fix: Icon grid size on mobile

--- a/src/styles/lists.styl
+++ b/src/styles/lists.styl
@@ -143,6 +143,14 @@ heavyShadow = 0 4px 24px 0 rgba(50, 54, 63, .08)
             width rem(24)
             height rem(24)
 
+    .item-grid-icon
+        width rem(16)
+        height rem(16)
+
+        +tiny-screen()
+            width rem(12)
+            height rem(12)
+
     .item-status
         position absolute
         bottom -6px
